# tic_work

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/motorcontrol/: SrvInt32.h  SrvInt32Request.h  SrvInt32Response.h  control.h  controlsensor.h
devel/lib/mypath/: pathplay  pathrecord
devel/lib/pkgconfig/: motorcontrol.pc  mypath.pc  test.pc
devel/lib/python2.7/dist-packages/motorcontrol/msg/: __init__.py  _control.py  _controlsensor.py
devel/lib/python2.7/dist-packages/motorcontrol/srv/: _SrvInt32.py
devel/lib/test/: chatter_pub  initial_pose  select_function  tic_function
devel/share/common-lisp/ros/motorcontrol/msg/: _package.lisp  _package_control.lisp  _package_controlsensor.lisp  control.lisp  controlsensor.lisp  motorcontrol-msg.asd
devel/share/common-lisp/ros/motorcontrol/srv/: SrvInt32.lisp  _package.lisp  _package_SrvInt32.lisp  motorcontrol-srv.asd
devel/share/gennodejs/ros/motorcontrol/msg/: _index.js  control.js  controlsensor.js
devel/share/gennodejs/ros/motorcontrol/srv/: SrvInt32.js
devel/share/motorcontrol/cmake/: motorcontrol-msg-extras.cmake  motorcontrol-msg-paths.cmake  motorcontrolConfig.cmake
devel/share/mypath/cmake/: mypathConfig.cmake
devel/share/roseus/ros/motorcontrol/: manifest.l
devel/share/roseus/ros/motorcontrol/msg/: control.l  controlsensor.l
devel/share/roseus/ros/motorcontrol/srv/: SrvInt32.l
devel/share/test/cmake/: testConfig.cmake
src/PathPlanner/devel/: .catkin  .rosinstall  setup.sh
src/PathPlanner/devel/lib/mypath/: pathplay  pathrecord
src/PathPlanner/devel/lib/pkgconfig/: mypath.pc
src/PathPlanner/devel/share/mypath/cmake/: mypathConfig.cmake
src/PathPlanner/src/: CMakeLists.txt  package.xml  read.md
src/PathPlanner/src/include/: PathPlanner.h  clcgload.h
src/PathPlanner/src/launch/: pathplay.launch
src/PathPlanner/src/src/: pathplay.cpp  pathrecord.cpp
src/motorcontrol/config/: my_dashgo_params.yaml
src/motorcontrol/launch/: motorcontrolcmd.launch
src/test/: CMakeLists.txt
src/test/src/: .initial_pose.cpp.swo  .initial_pose.cpp.swp  .select_function.cpp.swp  chatter_pub.cpp  initial_pose.cpp  initial_pose.cpp.bak  initial_pose.cpp.lg  select_function.cpp  tic_function.cpp
